--- a/css/breeasy.css
+++ b/css/breeasy.css
@@ -41,8 +41,14 @@ right: 0.3em;
 img.hero {
 margin: 1em 0;
 padding-left: 5em;
-
 }
+
+img.hero.border {
+border:1px solid #021a40;
+padding-left: 0em;
+margin-left: 2em;}
+
+
 ul.features li {
 list-style: square;
 }
